# codeylabs

./: README.md
news_app/: pubspec.yaml
news_app/ios/Runner.xcodeproj/: project.pbxproj
news_app/lib/: main.dart
news_app/lib/data/: sample_data.dart
news_app/lib/model/: news.dart
news_app/lib/widget/: custom_search_delegate.dart  news_detail_page.dart  post_list.dart
rust_news_app/: Cargo.toml  news.db
rust_news_app/migrations/: 20250709023636_create_articles.sql
rust_news_app/src/: db.rs  main.rs  models.rs  routes.rs  scraper.rs  summarizer.rs
