[package]
name = "rust_news_app"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
tokio = { version = "1.46.1", features = ["full"] }
reqwest = { version = "0.12.22", features = ["json"] }
rss = "2.0.12"
serde = "1.0.219"
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio", "macros"] }
serde_json = "1.0.140"
dotenvy = "0.15.7"
async-openai = "0.29"
anyhow = "1.0.98"
tokio-cron-scheduler = "0.14.0"
chrono = "0.4.41"
